# swapi2

./: .gitignore  CHANGELOG.md  flake.nix  swapi2.cabal
